--- a/module-6/src/app/views/layout.njk
+++ b/module-6/src/app/views/layout.njk
@@ -3,23 +3,21 @@
 
     <head>
         <link rel="stylesheet" href="/styles.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        
         {% block head %}
-            <title>Gym Manager</title>
-
+            <title>LaunchStore</title>
         {% endblock %}
-
     </head>
 
     <body>
-        <header>
-            <div class="links">
-                <a href="/instructors">Instructors</a>
-                <a href="/members">Members</a>
-            </div>
-        </header>
+        {% include "parts/header.njk" %}
 
-        {% block content %}{% endblock %}
-        <script src="/scripts.js"></script>
+        {% block content %}
+        
+        {% endblock %}
+        
+        {% include "parts/footer.njk" %}
     </body>
     
 </html>
