--- a/module-6/public/styles.css
+++ b/module-6/public/styles.css
@@ -222,6 +222,81 @@ form .item span input {
     margin-right: 2px;
 }
 
+form .item #photos-upload {
+    position: relative;
+    width: 200px;
+    overflow: hidden;
+    display: block;
+}
+
+form .item #photos-upload p {
+    text-align: center;
+    background-color: var(--secondary-color);
+    border-radius: 4px;
+    width: 100%;
+    padding: 8px 16px;
+    box-shadow: 0px 2px 2px -6px #333;
+    color: white;
+    text-transform: uppercase;
+    font-size: 14px;
+}
+
+form .item #photos-input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    overflow: hidden;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    cursor: pointer;
+}
+
+form .item #photos-preview {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 8px;
+    width: 100%;
+    margin: 8px 0;
+}
+
+form .item #photos-preview img {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+}
+
+form .item #photos-preview .photo {
+    position: relative;
+    
+}
+
+form .item #photos-preview .photo i {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    
+    opacity: 0;
+    background-color:#efefefdd;
+    color: red;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    font-size: 500%;  
+    cursor: pointer;
+    transition: opacity 200ms;
+}
+
+form .item #photos-preview .photo i:hover {
+    opacity: 1;
+}
+
+
 footer {
     margin-top: auto;
     display: flex;
