--- a/module-6/src/app/views/products/edit.njk
+++ b/module-6/src/app/views/products/edit.njk
@@ -2,9 +2,9 @@
 
 {% block content %}
 <section class="container form">
-    <form method="POST" action="/products?_method=PUT">
+    <form method="POST" action="/products?_method=PUT" enctype="multipart/form-data">
         <div class="header">
-            <h3>Editar Produto: {{product.name}}</h3>
+            <h3>Editar Produto: {{product.id}}</h3>
         </div>
     
         <div class="fields">
@@ -13,7 +13,7 @@
         
         <input 
         type="hidden" 
-        name="id" 
+        name="id"
         value="{{ product.id }}"
         >
 
