--- a/module-6/src/app/views/products/show.njk
+++ b/module-6/src/app/views/products/show.njk
@@ -8,8 +8,20 @@
             {% if not files[0] %}
             <img src="http://placehold.it/500x500?text=PRODUTO SEM FOTO" />
             {% else %}
-            <img src="{{files[0].src}}" alt="{{files[0].name}}"/>
+            <img src="{{files[0].src}}" alt="{{files[0].name}}"
+            onclick="LightBox.open()"
+            >
             {% endif %}
+
+            <div class="lightbox-target">
+                <img src="{{files[0].src}}" alt="{{files[0].name}}"/>
+                <a href="#" class="lightbox-close"
+                onclick="LightBox.close()"
+                >
+                    <i class="material-icons">close</i>
+                </a>
+            </div>
+
         </div>
         <div class="gallery-preview">
             {% for image in files %}
