--- a/Foodfy/src/app/views/admin/recipes/loadRecipes.njk
+++ b/Foodfy/src/app/views/admin/recipes/loadRecipes.njk
@@ -3,7 +3,7 @@
         {% for recipe in recipes %}
             <div class="recipe">
                 <div class="logo-image">
-                    <img src="{{ recipe.image }}" alt="{{ recipe.title }}">
+                    <img src="{{ recipe.path }}" alt="{{ recipe.title }}">
                 </div>
                 <div class="details">
                     <h4 class="title">{{ recipe.title }}</h4>
