--- a/Foodfy/src/app/views/admin/recipes/create.njk
+++ b/Foodfy/src/app/views/admin/recipes/create.njk
@@ -6,7 +6,7 @@
 
 {% block content %}
 <div class="recipe">
-    <form action="/admin/recipes" method="POST">
+    <form action="/admin/recipes" method="POST" id="save_recipe">
         <div class="recipe-dashboard">
             <h4>Criando receita</h4>
             <button type="submit">Salvar receita</button>
