--- a/Foodfy/src/app/views/model.njk
+++ b/Foodfy/src/app/views/model.njk
@@ -7,6 +7,7 @@
     {% endblock head %}
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <meta charset="UTF-8"> 
     </head>
 
