It updates input fields

--- a/Foodfy/src/app/views/admin/chefs/chefModel.njk
+++ b/Foodfy/src/app/views/admin/chefs/chefModel.njk
@@ -26,5 +26,5 @@
 
 <div class="item">
     <div class="title">Nome do chef *</div>
-    <input type="text" name="name" value="{{ chef.name }}">
+    <input type="text" name="name" value="{{ chef.name }}" required>
 </div>
