--- a/Foodfy/src/app/views/admin/chefs/chefModel.njk
+++ b/Foodfy/src/app/views/admin/chefs/chefModel.njk
@@ -1,5 +1,5 @@
 <div class="item">
-    <div class="title">Avatar *</div>
+    <div class="title">Avatar</div>
     <div>
         <div id="photos-upload">
             <input type="file" 
@@ -12,7 +12,7 @@
         </div>
         <div id="photos-preview">
             {% if file %}
-                    <div class="photo" id="{{file.id}}">
+                    <div class="photo" id="{{file.id}}" style="animation: toRight forwards 200ms ease-in-out;">
                         <img src="{{file.src}}" alt="{{file.name}}">
                         <i class="material-icons" onclick="PhotosUpload.removePreviousPhoto(event)">
                             close
@@ -25,6 +25,6 @@
 </div>
 
 <div class="item">
-    <div class="title">Nome do chef *</div>
+    <div class="title">Nome do chef</div>
     <input type="text" name="name" value="{{ chef.name }}" required>
 </div>
