--- a/Foodfy/src/app/views/admin/recipes/edit.njk
+++ b/Foodfy/src/app/views/admin/recipes/edit.njk
@@ -18,7 +18,7 @@
         </div>
     </div>
 
-    <form action="/admin/recipes?_method=PUT" method="post" id="save_recipe">
+    <form action="/admin/recipes?_method=PUT" method="post" id="save_recipe" enctype="multipart/form-data">
         <input type="hidden" name="id" value="{{recipe.id}}">
         
         {% include './recipeModel.njk' %}
